Fix tar bar overlapping with error messages

--- a/stylesheets/tabs.less
+++ b/stylesheets/tabs.less
@@ -4,7 +4,7 @@
 .tab-bar {
   height: @tab-bar-height;
   background: @tab-bar-background-color;
-  z-index: 1002;
+  z-index: 999;
 
   .tab {
     transition: all 200ms linear;
